--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          script: cd ${{ secrets.PROJECT_PATH }} && git pull && npm i && npm run build && python ${{ secrets.IP_SCRIPT_PATH }} ${{ secrets.IP }} && systemctl restart nginx
+          script: cd ${{ secrets.PROJECT_PATH }} && git pull && npm i && python ${{ secrets.IP_SCRIPT_PATH }} ${{ secrets.IP }} && systemctl restart nginx
