--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "homepage": "https://github.com/EsteveSegura/twitch-shared-community-graph-api#readme",
   "dependencies": {
     "awilix": "^5.0.1",
+    "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
