--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "expeditious-engine-redis": "^0.1.2",
     "express": "^4.17.1",
+    "express-expeditious": "^5.1.1",
     "jest": "^27.1.0",
     "nodemon": "^2.0.12",
     "uuid": "^8.3.2"
